fix icons spacing

--- a/src/sass/components/_item.scss
+++ b/src/sass/components/_item.scss
@@ -57,7 +57,7 @@
     &__flag-container {
         display: flex;
         width: 100%;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
 
     &__icon {
